ensure delivery note in header hidden on mobile

--- a/UI/Source/Header/Header.scss
+++ b/UI/Source/Header/Header.scss
@@ -476,7 +476,7 @@
 
 			}
 
-			&--hide-mobile {
+			&--hide-mobile.ui-link {
 				display: none;
 			}
 
